// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`structs/kernel serializes and prints CombinedAccumulatedData 1`] = `
"aggregation_object:
P0: { 0x1, 0x2 }
P1: { 0x101, 0x102 }
public_inputs: [
 0x3
 0x4
 0x5
 0x6
]
proof_witness_indices: [ 7 8 9 10 11 12 ]
has_data: 0

read_requests: [ 0x81 0x82 0x83 0x84 0x85 0x86 0x87 0x88 0x89 0x8a 0x8b 0x8c 0x8d 0x8e 0x8f 0x90 0x91 0x92 0x93 0x94 0x95 0x96 0x97 0x98 0x99 0x9a 0x9b 0x9c 0x9d 0x9e 0x9f 0xa0 0xa1 0xa2 0xa3 0xa4 0xa5 0xa6 0xa7 0xa8 0xa9 0xaa 0xab 0xac 0xad 0xae 0xaf 0xb0 0xb1 0xb2 0xb3 0xb4 0xb5 0xb6 0xb7 0xb8 0xb9 0xba 0xbb 0xbc 0xbd 0xbe 0xbf 0xc0 0xc1 0xc2 0xc3 0xc4 0xc5 0xc6 0xc7 0xc8 0xc9 0xca 0xcb 0xcc 0xcd 0xce 0xcf 0xd0 0xd1 0xd2 0xd3 0xd4 0xd5 0xd6 0xd7 0xd8 0xd9 0xda 0xdb 0xdc 0xdd 0xde 0xdf 0xe0 0xe1 0xe2 0xe3 0xe4 0xe5 0xe6 0xe7 0xe8 0xe9 0xea 0xeb 0xec 0xed 0xee 0xef 0xf0 0xf1 0xf2 0xf3 0xf4 0xf5 0xf6 0xf7 0xf8 0xf9 0xfa 0xfb 0xfc 0xfd 0xfe 0xff 0x100 ]
new_commitments: [ 0x101 0x102 0x103 0x104 0x105 0x106 0x107 0x108 0x109 0x10a 0x10b 0x10c 0x10d 0x10e 0x10f 0x110 0x111 0x112 0x113 0x114 0x115 0x116 0x117 0x118 0x119 0x11a 0x11b 0x11c 0x11d 0x11e 0x11f 0x120 0x121 0x122 0x123 0x124 0x125 0x126 0x127 0x128 0x129 0x12a 0x12b 0x12c 0x12d 0x12e 0x12f 0x130 0x131 0x132 0x133 0x134 0x135 0x136 0x137 0x138 0x139 0x13a 0x13b 0x13c 0x13d 0x13e 0x13f 0x140 ]
new_nullifiers: [ 0x201 0x202 0x203 0x204 0x205 0x206 0x207 0x208 0x209 0x20a 0x20b 0x20c 0x20d 0x20e 0x20f 0x210 0x211 0x212 0x213 0x214 0x215 0x216 0x217 0x218 0x219 0x21a 0x21b 0x21c 0x21d 0x21e 0x21f 0x220 0x221 0x222 0x223 0x224 0x225 0x226 0x227 0x228 0x229 0x22a 0x22b 0x22c 0x22d 0x22e 0x22f 0x230 0x231 0x232 0x233 0x234 0x235 0x236 0x237 0x238 0x239 0x23a 0x23b 0x23c 0x23d 0x23e 0x23f 0x240 ]
nullified_commitments: [ 0x301 0x302 0x303 0x304 0x305 0x306 0x307 0x308 0x309 0x30a 0x30b 0x30c 0x30d 0x30e 0x30f 0x310 0x311 0x312 0x313 0x314 0x315 0x316 0x317 0x318 0x319 0x31a 0x31b 0x31c 0x31d 0x31e 0x31f 0x320 0x321 0x322 0x323 0x324 0x325 0x326 0x327 0x328 0x329 0x32a 0x32b 0x32c 0x32d 0x32e 0x32f 0x330 0x331 0x332 0x333 0x334 0x335 0x336 0x337 0x338 0x339 0x33a 0x33b 0x33c 0x33d 0x33e 0x33f 0x340 ]
private_call_stack: [ 0x401 0x402 0x403 0x404 0x405 0x406 0x407 0x408 ]
public_call_stack: [ 0x501 0x502 0x503 0x504 0x505 0x506 0x507 0x508 ]
new_l2_to_l1_msgs: [ 0x601 0x602 ]
encrypted_logs_hash: [ 0x701 0x702 ]
unencrypted_logs_hash: [ 0x801 0x802 ]
encrypted_log_preimages_length: 0x901
unencrypted_log_preimages_length: 0xa01
new_contracts: [ contract_address: 0xb01
portal_contract_address: 0x202020202020202020202020202020202020202
function_tree_root: 0xb03
 ]
optionally_revealed_data: [ call_stack_item_hash: 0xc01
function_data: selector:
value: c02

is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc03
portal_contract_address: 0x404040404040404040404040404040404040404
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc02
function_data: selector:
value: c03

is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc04
portal_contract_address: 0x505050505050505050505050505050505050505
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc03
function_data: selector:
value: c04

is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc05
portal_contract_address: 0x606060606060606060606060606060606060606
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc04
function_data: selector:
value: c05

is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc06
portal_contract_address: 0x707070707070707070707070707070707070707
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 ]
public_data_update_requests: [ leaf_index: 0xd01
old_value: 0xd02
new_value: 0xd03
 leaf_index: 0xd02
old_value: 0xd03
new_value: 0xd04
 leaf_index: 0xd03
old_value: 0xd04
new_value: 0xd05
 leaf_index: 0xd04
old_value: 0xd05
new_value: 0xd06
 leaf_index: 0xd05
old_value: 0xd06
new_value: 0xd07
 leaf_index: 0xd06
old_value: 0xd07
new_value: 0xd08
 leaf_index: 0xd07
old_value: 0xd08
new_value: 0xd09
 leaf_index: 0xd08
old_value: 0xd09
new_value: 0xd0a
 leaf_index: 0xd09
old_value: 0xd0a
new_value: 0xd0b
 leaf_index: 0xd0a
old_value: 0xd0b
new_value: 0xd0c
 leaf_index: 0xd0b
old_value: 0xd0c
new_value: 0xd0d
 leaf_index: 0xd0c
old_value: 0xd0d
new_value: 0xd0e
 leaf_index: 0xd0d
old_value: 0xd0e
new_value: 0xd0f
 leaf_index: 0xd0e
old_value: 0xd0f
new_value: 0xd10
 leaf_index: 0xd0f
old_value: 0xd10
new_value: 0xd11
 leaf_index: 0xd10
old_value: 0xd11
new_value: 0xd12
 ]
public_data_reads: [ leaf_index: 0xe01
value: 0xe02
 leaf_index: 0xe02
value: 0xe03
 leaf_index: 0xe03
value: 0xe04
 leaf_index: 0xe04
value: 0xe05
 leaf_index: 0xe05
value: 0xe06
 leaf_index: 0xe06
value: 0xe07
 leaf_index: 0xe07
value: 0xe08
 leaf_index: 0xe08
value: 0xe09
 leaf_index: 0xe09
value: 0xe0a
 leaf_index: 0xe0a
value: 0xe0b
 leaf_index: 0xe0b
value: 0xe0c
 leaf_index: 0xe0c
value: 0xe0d
 leaf_index: 0xe0d
value: 0xe0e
 leaf_index: 0xe0e
value: 0xe0f
 leaf_index: 0xe0f
value: 0xe10
 leaf_index: 0xe10
value: 0xe11
 ]
"
`;

exports[`structs/kernel serializes and prints EcdsaSignature 1`] = `"{ 0101010101010101010101010101010101010101010101010101010101010101, 0101010101010101010101010101010101010101010101010101010101010101 }"`;

exports[`structs/kernel serializes and prints FinalAccumulatedData 1`] = `
"aggregation_object:
P0: { 0x1, 0x2 }
P1: { 0x101, 0x102 }
public_inputs: [
 0x3
 0x4
 0x5
 0x6
]
proof_witness_indices: [ 7 8 9 10 11 12 ]
has_data: 0

new_commitments: [ 0x101 0x102 0x103 0x104 0x105 0x106 0x107 0x108 0x109 0x10a 0x10b 0x10c 0x10d 0x10e 0x10f 0x110 0x111 0x112 0x113 0x114 0x115 0x116 0x117 0x118 0x119 0x11a 0x11b 0x11c 0x11d 0x11e 0x11f 0x120 0x121 0x122 0x123 0x124 0x125 0x126 0x127 0x128 0x129 0x12a 0x12b 0x12c 0x12d 0x12e 0x12f 0x130 0x131 0x132 0x133 0x134 0x135 0x136 0x137 0x138 0x139 0x13a 0x13b 0x13c 0x13d 0x13e 0x13f 0x140 ]
new_nullifiers: [ 0x201 0x202 0x203 0x204 0x205 0x206 0x207 0x208 0x209 0x20a 0x20b 0x20c 0x20d 0x20e 0x20f 0x210 0x211 0x212 0x213 0x214 0x215 0x216 0x217 0x218 0x219 0x21a 0x21b 0x21c 0x21d 0x21e 0x21f 0x220 0x221 0x222 0x223 0x224 0x225 0x226 0x227 0x228 0x229 0x22a 0x22b 0x22c 0x22d 0x22e 0x22f 0x230 0x231 0x232 0x233 0x234 0x235 0x236 0x237 0x238 0x239 0x23a 0x23b 0x23c 0x23d 0x23e 0x23f 0x240 ]
nullified_commitments: [ 0x301 0x302 0x303 0x304 0x305 0x306 0x307 0x308 0x309 0x30a 0x30b 0x30c 0x30d 0x30e 0x30f 0x310 0x311 0x312 0x313 0x314 0x315 0x316 0x317 0x318 0x319 0x31a 0x31b 0x31c 0x31d 0x31e 0x31f 0x320 0x321 0x322 0x323 0x324 0x325 0x326 0x327 0x328 0x329 0x32a 0x32b 0x32c 0x32d 0x32e 0x32f 0x330 0x331 0x332 0x333 0x334 0x335 0x336 0x337 0x338 0x339 0x33a 0x33b 0x33c 0x33d 0x33e 0x33f 0x340 ]
private_call_stack: [ 0x401 0x402 0x403 0x404 0x405 0x406 0x407 0x408 ]
public_call_stack: [ 0x501 0x502 0x503 0x504 0x505 0x506 0x507 0x508 ]
new_l2_to_l1_msgs: [ 0x601 0x602 ]
encrypted_logs_hash: [ 0x701 0x702 ]
unencrypted_logs_hash: [ 0x801 0x802 ]
encrypted_log_preimages_length: 0x901
unencrypted_log_preimages_length: 0xa01
new_contracts: [ contract_address: 0xb01
portal_contract_address: 0x202020202020202020202020202020202020202
function_tree_root: 0xb03
 ]
optionally_revealed_data: [ call_stack_item_hash: 0xc01
function_data: selector:
value: c02

is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc03
portal_contract_address: 0x404040404040404040404040404040404040404
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc02
function_data: selector:
value: c03

is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc04
portal_contract_address: 0x505050505050505050505050505050505050505
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc03
function_data: selector:
value: c04

is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc05
portal_contract_address: 0x606060606060606060606060606060606060606
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc04
function_data: selector:
value: c05

is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc06
portal_contract_address: 0x707070707070707070707070707070707070707
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 ]
"
`;

exports[`structs/kernel serializes and prints previous_kernel_data 1`] = `
"public_inputs:
end:
aggregation_object:
P0: { 0x1, 0x2 }
P1: { 0x101, 0x102 }
public_inputs: [
 0x3
 0x4
 0x5
 0x6
]
proof_witness_indices: [ 7 8 9 10 11 12 ]
has_data: 0

read_requests: [ 0x81 0x82 0x83 0x84 0x85 0x86 0x87 0x88 0x89 0x8a 0x8b 0x8c 0x8d 0x8e 0x8f 0x90 0x91 0x92 0x93 0x94 0x95 0x96 0x97 0x98 0x99 0x9a 0x9b 0x9c 0x9d 0x9e 0x9f 0xa0 0xa1 0xa2 0xa3 0xa4 0xa5 0xa6 0xa7 0xa8 0xa9 0xaa 0xab 0xac 0xad 0xae 0xaf 0xb0 0xb1 0xb2 0xb3 0xb4 0xb5 0xb6 0xb7 0xb8 0xb9 0xba 0xbb 0xbc 0xbd 0xbe 0xbf 0xc0 0xc1 0xc2 0xc3 0xc4 0xc5 0xc6 0xc7 0xc8 0xc9 0xca 0xcb 0xcc 0xcd 0xce 0xcf 0xd0 0xd1 0xd2 0xd3 0xd4 0xd5 0xd6 0xd7 0xd8 0xd9 0xda 0xdb 0xdc 0xdd 0xde 0xdf 0xe0 0xe1 0xe2 0xe3 0xe4 0xe5 0xe6 0xe7 0xe8 0xe9 0xea 0xeb 0xec 0xed 0xee 0xef 0xf0 0xf1 0xf2 0xf3 0xf4 0xf5 0xf6 0xf7 0xf8 0xf9 0xfa 0xfb 0xfc 0xfd 0xfe 0xff 0x100 ]
new_commitments: [ 0x101 0x102 0x103 0x104 0x105 0x106 0x107 0x108 0x109 0x10a 0x10b 0x10c 0x10d 0x10e 0x10f 0x110 0x111 0x112 0x113 0x114 0x115 0x116 0x117 0x118 0x119 0x11a 0x11b 0x11c 0x11d 0x11e 0x11f 0x120 0x121 0x122 0x123 0x124 0x125 0x126 0x127 0x128 0x129 0x12a 0x12b 0x12c 0x12d 0x12e 0x12f 0x130 0x131 0x132 0x133 0x134 0x135 0x136 0x137 0x138 0x139 0x13a 0x13b 0x13c 0x13d 0x13e 0x13f 0x140 ]
new_nullifiers: [ 0x201 0x202 0x203 0x204 0x205 0x206 0x207 0x208 0x209 0x20a 0x20b 0x20c 0x20d 0x20e 0x20f 0x210 0x211 0x212 0x213 0x214 0x215 0x216 0x217 0x218 0x219 0x21a 0x21b 0x21c 0x21d 0x21e 0x21f 0x220 0x221 0x222 0x223 0x224 0x225 0x226 0x227 0x228 0x229 0x22a 0x22b 0x22c 0x22d 0x22e 0x22f 0x230 0x231 0x232 0x233 0x234 0x235 0x236 0x237 0x238 0x239 0x23a 0x23b 0x23c 0x23d 0x23e 0x23f 0x240 ]
nullified_commitments: [ 0x301 0x302 0x303 0x304 0x305 0x306 0x307 0x308 0x309 0x30a 0x30b 0x30c 0x30d 0x30e 0x30f 0x310 0x311 0x312 0x313 0x314 0x315 0x316 0x317 0x318 0x319 0x31a 0x31b 0x31c 0x31d 0x31e 0x31f 0x320 0x321 0x322 0x323 0x324 0x325 0x326 0x327 0x328 0x329 0x32a 0x32b 0x32c 0x32d 0x32e 0x32f 0x330 0x331 0x332 0x333 0x334 0x335 0x336 0x337 0x338 0x339 0x33a 0x33b 0x33c 0x33d 0x33e 0x33f 0x340 ]
private_call_stack: [ 0x401 0x402 0x403 0x404 0x405 0x406 0x407 0x408 ]
public_call_stack: [ 0x501 0x502 0x503 0x504 0x505 0x506 0x507 0x508 ]
new_l2_to_l1_msgs: [ 0x601 0x602 ]
encrypted_logs_hash: [ 0x701 0x702 ]
unencrypted_logs_hash: [ 0x801 0x802 ]
encrypted_log_preimages_length: 0x901
unencrypted_log_preimages_length: 0xa01
new_contracts: [ contract_address: 0xb01
portal_contract_address: 0x202020202020202020202020202020202020202
function_tree_root: 0xb03
 ]
optionally_revealed_data: [ call_stack_item_hash: 0xc01
function_data: selector:
value: c02

is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc03
portal_contract_address: 0x404040404040404040404040404040404040404
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc02
function_data: selector:
value: c03

is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc04
portal_contract_address: 0x505050505050505050505050505050505050505
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc03
function_data: selector:
value: c04

is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc05
portal_contract_address: 0x606060606060606060606060606060606060606
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc04
function_data: selector:
value: c05

is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc06
portal_contract_address: 0x707070707070707070707070707070707070707
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 ]
public_data_update_requests: [ leaf_index: 0xd01
old_value: 0xd02
new_value: 0xd03
 leaf_index: 0xd02
old_value: 0xd03
new_value: 0xd04
 leaf_index: 0xd03
old_value: 0xd04
new_value: 0xd05
 leaf_index: 0xd04
old_value: 0xd05
new_value: 0xd06
 leaf_index: 0xd05
old_value: 0xd06
new_value: 0xd07
 leaf_index: 0xd06
old_value: 0xd07
new_value: 0xd08
 leaf_index: 0xd07
old_value: 0xd08
new_value: 0xd09
 leaf_index: 0xd08
old_value: 0xd09
new_value: 0xd0a
 leaf_index: 0xd09
old_value: 0xd0a
new_value: 0xd0b
 leaf_index: 0xd0a
old_value: 0xd0b
new_value: 0xd0c
 leaf_index: 0xd0b
old_value: 0xd0c
new_value: 0xd0d
 leaf_index: 0xd0c
old_value: 0xd0d
new_value: 0xd0e
 leaf_index: 0xd0d
old_value: 0xd0e
new_value: 0xd0f
 leaf_index: 0xd0e
old_value: 0xd0f
new_value: 0xd10
 leaf_index: 0xd0f
old_value: 0xd10
new_value: 0xd11
 leaf_index: 0xd10
old_value: 0xd11
new_value: 0xd12
 ]
public_data_reads: [ leaf_index: 0xe01
value: 0xe02
 leaf_index: 0xe02
value: 0xe03
 leaf_index: 0xe03
value: 0xe04
 leaf_index: 0xe04
value: 0xe05
 leaf_index: 0xe05
value: 0xe06
 leaf_index: 0xe06
value: 0xe07
 leaf_index: 0xe07
value: 0xe08
 leaf_index: 0xe08
value: 0xe09
 leaf_index: 0xe09
value: 0xe0a
 leaf_index: 0xe0a
value: 0xe0b
 leaf_index: 0xe0b
value: 0xe0c
 leaf_index: 0xe0c
value: 0xe0d
 leaf_index: 0xe0d
value: 0xe0e
 leaf_index: 0xe0e
value: 0xe0f
 leaf_index: 0xe0f
value: 0xe10
 leaf_index: 0xe10
value: 0xe11
 ]

constants:
block_data:
private_data_tree_root: 0x101
nullifier_tree_root: 0x102
contract_tree_root: 0x103
l1_to_l2_messages_tree_root: 0x104
blocks_tree_root: 0x105
private_kernel_vk_tree_root: 0x106
public_data_tree_root: 0x107
global_variables_hash: 0x108

tx_context:
is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: deployer_public_key:
x: 0x105
y: 0x106

constructor_vk_hash: 0x106
function_tree_root: 0x107
contract_address_salt: 0x108
portal_contract_address: 0x909090909090909090909090909090909090909

chain_id: 0x0
version: 0x0


is_private: 1

proof: [ 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 ]
vk: key.circuit_type: 0
key.circuit_size: 101
key.num_public_inputs: 102
key.commitments: [
 A: { 0x200, 0x300 }
]
key.contains_recursive_proof: 1
key.recursive_proof_public_input_indices: [ 400 401 402 403 404 ]

vk_index: 66
vk_path: [ 0x1000 0x1001 0x1002 ]
"
`;

exports[`structs/kernel serializes and prints private_kernel_inputs_init 1`] = `
"tx_request:
origin: 0x1
function_data: selector:
value: 257

is_internal: 0
is_private: 1
is_constructor: 1

args_hash: 0x201
tx_context:
is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: deployer_public_key:
x: 0x401
y: 0x402

constructor_vk_hash: 0x402
function_tree_root: 0x403
contract_address_salt: 0x404
portal_contract_address: 0x505050505050505050505050505050505050505

chain_id: 0x0
version: 0x0


private_call:
call_stack_item:
contract_address: 0x1001
function_data: selector:
value: 4098

is_internal: 0
is_private: 1
is_constructor: 1

public_inputs: call_context:
msg_sender: 0x1012
storage_contract_address: 0x1013
portal_contract_address: 0x1014
function_selector: value: 4117

is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1111
return_values: [ 0x1211 0x1212 0x1213 0x1214 ]
read_requests: [ 0x1311 0x1312 0x1313 0x1314 0x1315 0x1316 0x1317 0x1318 0x1319 0x131a 0x131b 0x131c 0x131d 0x131e 0x131f 0x1320 0x1321 0x1322 0x1323 0x1324 0x1325 0x1326 0x1327 0x1328 0x1329 0x132a 0x132b 0x132c 0x132d 0x132e 0x132f 0x1330 ]
new_commitments: [ 0x1411 0x1412 0x1413 0x1414 0x1415 0x1416 0x1417 0x1418 0x1419 0x141a 0x141b 0x141c 0x141d 0x141e 0x141f 0x1420 ]
new_nullifiers: [ 0x1511 0x1512 0x1513 0x1514 0x1515 0x1516 0x1517 0x1518 0x1519 0x151a 0x151b 0x151c 0x151d 0x151e 0x151f 0x1520 ]
nullified_commitments: [ 0x1521 0x1522 0x1523 0x1524 0x1525 0x1526 0x1527 0x1528 0x1529 0x152a 0x152b 0x152c 0x152d 0x152e 0x152f 0x1530 ]
private_call_stack: [ 0x1611 0x1612 0x1613 0x1614 ]
public_call_stack: [ 0x1711 0x1712 0x1713 0x1714 ]
new_l2_to_l1_msgs: [ 0x1811 0x1812 ]
encrypted_logs_hash: [ 0x1911 0x1912 ]
unencrypted_logs_hash: [ 0x1a11 0x1a12 ]
encrypted_log_preimages_length: 0x1b11
unencrypted_log_preimages_length: 0x1c11
historic_block_data: private_data_tree_root: 0x1d11
nullifier_tree_root: 0x1d12
contract_tree_root: 0x1d13
l1_to_l2_messages_tree_root: 0x1d14
blocks_tree_root: 0x1d15
private_kernel_vk_tree_root: 0x1d16
public_data_tree_root: 0x1d17
global_variables_hash: 0x1d18

contract_deployment_data: deployer_public_key:
x: 0x1e11
y: 0x1e12

constructor_vk_hash: 0x1e12
function_tree_root: 0x1e13
contract_address_salt: 0x1e14
portal_contract_address: 0x1515151515151515151515151515151515151515

chain_id: 0x2411
version: 0x2511

is_execution_request: 0

private_call_stack_preimages: [ contract_address: 0x1011
function_data: selector:
value: 1012

is_internal: 0
is_private: 1
is_constructor: 1

public_inputs: call_context:
msg_sender: 0x1022
storage_contract_address: 0x1023
portal_contract_address: 0x1024
function_selector: value: 1025

is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1121
return_values: [ 0x1221 0x1222 0x1223 0x1224 ]
read_requests: [ 0x1321 0x1322 0x1323 0x1324 0x1325 0x1326 0x1327 0x1328 0x1329 0x132a 0x132b 0x132c 0x132d 0x132e 0x132f 0x1330 0x1331 0x1332 0x1333 0x1334 0x1335 0x1336 0x1337 0x1338 0x1339 0x133a 0x133b 0x133c 0x133d 0x133e 0x133f 0x1340 ]
new_commitments: [ 0x1421 0x1422 0x1423 0x1424 0x1425 0x1426 0x1427 0x1428 0x1429 0x142a 0x142b 0x142c 0x142d 0x142e 0x142f 0x1430 ]
new_nullifiers: [ 0x1521 0x1522 0x1523 0x1524 0x1525 0x1526 0x1527 0x1528 0x1529 0x152a 0x152b 0x152c 0x152d 0x152e 0x152f 0x1530 ]
nullified_commitments: [ 0x1531 0x1532 0x1533 0x1534 0x1535 0x1536 0x1537 0x1538 0x1539 0x153a 0x153b 0x153c 0x153d 0x153e 0x153f 0x1540 ]
private_call_stack: [ 0x1621 0x1622 0x1623 0x1624 ]
public_call_stack: [ 0x1721 0x1722 0x1723 0x1724 ]
new_l2_to_l1_msgs: [ 0x1821 0x1822 ]
encrypted_logs_hash: [ 0x1921 0x1922 ]
unencrypted_logs_hash: [ 0x1a21 0x1a22 ]
encrypted_log_preimages_length: 0x1b21
unencrypted_log_preimages_length: 0x1c21
historic_block_data: private_data_tree_root: 0x1d21
nullifier_tree_root: 0x1d22
contract_tree_root: 0x1d23
l1_to_l2_messages_tree_root: 0x1d24
blocks_tree_root: 0x1d25
private_kernel_vk_tree_root: 0x1d26
public_data_tree_root: 0x1d27
global_variables_hash: 0x1d28

contract_deployment_data: deployer_public_key:
x: 0x1e21
y: 0x1e22

constructor_vk_hash: 0x1e22
function_tree_root: 0x1e23
contract_address_salt: 0x1e24
portal_contract_address: 0x2525252525252525252525252525252525252525

chain_id: 0x2421
version: 0x2521

is_execution_request: 0
 contract_address: 0x1012
function_data: selector:
value: 1013

is_internal: 0
is_private: 1
is_constructor: 1

public_inputs: call_context:
msg_sender: 0x1023
storage_contract_address: 0x1024
portal_contract_address: 0x1025
function_selector: value: 1026

is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1122
return_values: [ 0x1222 0x1223 0x1224 0x1225 ]
read_requests: [ 0x1322 0x1323 0x1324 0x1325 0x1326 0x1327 0x1328 0x1329 0x132a 0x132b 0x132c 0x132d 0x132e 0x132f 0x1330 0x1331 0x1332 0x1333 0x1334 0x1335 0x1336 0x1337 0x1338 0x1339 0x133a 0x133b 0x133c 0x133d 0x133e 0x133f 0x1340 0x1341 ]
new_commitments: [ 0x1422 0x1423 0x1424 0x1425 0x1426 0x1427 0x1428 0x1429 0x142a 0x142b 0x142c 0x142d 0x142e 0x142f 0x1430 0x1431 ]
new_nullifiers: [ 0x1522 0x1523 0x1524 0x1525 0x1526 0x1527 0x1528 0x1529 0x152a 0x152b 0x152c 0x152d 0x152e 0x152f 0x1530 0x1531 ]
nullified_commitments: [ 0x1532 0x1533 0x1534 0x1535 0x1536 0x1537 0x1538 0x1539 0x153a 0x153b 0x153c 0x153d 0x153e 0x153f 0x1540 0x1541 ]
private_call_stack: [ 0x1622 0x1623 0x1624 0x1625 ]
public_call_stack: [ 0x1722 0x1723 0x1724 0x1725 ]
new_l2_to_l1_msgs: [ 0x1822 0x1823 ]
encrypted_logs_hash: [ 0x1922 0x1923 ]
unencrypted_logs_hash: [ 0x1a22 0x1a23 ]
encrypted_log_preimages_length: 0x1b22
unencrypted_log_preimages_length: 0x1c22
historic_block_data: private_data_tree_root: 0x1d22
nullifier_tree_root: 0x1d23
contract_tree_root: 0x1d24
l1_to_l2_messages_tree_root: 0x1d25
blocks_tree_root: 0x1d26
private_kernel_vk_tree_root: 0x1d27
public_data_tree_root: 0x1d28
global_variables_hash: 0x1d29

contract_deployment_data: deployer_public_key:
x: 0x1e22
y: 0x1e23

constructor_vk_hash: 0x1e23
function_tree_root: 0x1e24
contract_address_salt: 0x1e25
portal_contract_address: 0x2626262626262626262626262626262626262626

chain_id: 0x2422
version: 0x2522

is_execution_request: 0
 contract_address: 0x1013
function_data: selector:
value: 1014

is_internal: 0
is_private: 1
is_constructor: 1

public_inputs: call_context:
msg_sender: 0x1024
storage_contract_address: 0x1025
portal_contract_address: 0x1026
function_selector: value: 1027

is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1123
return_values: [ 0x1223 0x1224 0x1225 0x1226 ]
read_requests: [ 0x1323 0x1324 0x1325 0x1326 0x1327 0x1328 0x1329 0x132a 0x132b 0x132c 0x132d 0x132e 0x132f 0x1330 0x1331 0x1332 0x1333 0x1334 0x1335 0x1336 0x1337 0x1338 0x1339 0x133a 0x133b 0x133c 0x133d 0x133e 0x133f 0x1340 0x1341 0x1342 ]
new_commitments: [ 0x1423 0x1424 0x1425 0x1426 0x1427 0x1428 0x1429 0x142a 0x142b 0x142c 0x142d 0x142e 0x142f 0x1430 0x1431 0x1432 ]
new_nullifiers: [ 0x1523 0x1524 0x1525 0x1526 0x1527 0x1528 0x1529 0x152a 0x152b 0x152c 0x152d 0x152e 0x152f 0x1530 0x1531 0x1532 ]
nullified_commitments: [ 0x1533 0x1534 0x1535 0x1536 0x1537 0x1538 0x1539 0x153a 0x153b 0x153c 0x153d 0x153e 0x153f 0x1540 0x1541 0x1542 ]
private_call_stack: [ 0x1623 0x1624 0x1625 0x1626 ]
public_call_stack: [ 0x1723 0x1724 0x1725 0x1726 ]
new_l2_to_l1_msgs: [ 0x1823 0x1824 ]
encrypted_logs_hash: [ 0x1923 0x1924 ]
unencrypted_logs_hash: [ 0x1a23 0x1a24 ]
encrypted_log_preimages_length: 0x1b23
unencrypted_log_preimages_length: 0x1c23
historic_block_data: private_data_tree_root: 0x1d23
nullifier_tree_root: 0x1d24
contract_tree_root: 0x1d25
l1_to_l2_messages_tree_root: 0x1d26
blocks_tree_root: 0x1d27
private_kernel_vk_tree_root: 0x1d28
public_data_tree_root: 0x1d29
global_variables_hash: 0x1d2a

contract_deployment_data: deployer_public_key:
x: 0x1e23
y: 0x1e24

constructor_vk_hash: 0x1e24
function_tree_root: 0x1e25
contract_address_salt: 0x1e26
portal_contract_address: 0x2727272727272727272727272727272727272727

chain_id: 0x2423
version: 0x2523

is_execution_request: 0
 contract_address: 0x1014
function_data: selector:
value: 1015

is_internal: 0
is_private: 1
is_constructor: 1

public_inputs: call_context:
msg_sender: 0x1025
storage_contract_address: 0x1026
portal_contract_address: 0x1027
function_selector: value: 1028

is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1124
return_values: [ 0x1224 0x1225 0x1226 0x1227 ]
read_requests: [ 0x1324 0x1325 0x1326 0x1327 0x1328 0x1329 0x132a 0x132b 0x132c 0x132d 0x132e 0x132f 0x1330 0x1331 0x1332 0x1333 0x1334 0x1335 0x1336 0x1337 0x1338 0x1339 0x133a 0x133b 0x133c 0x133d 0x133e 0x133f 0x1340 0x1341 0x1342 0x1343 ]
new_commitments: [ 0x1424 0x1425 0x1426 0x1427 0x1428 0x1429 0x142a 0x142b 0x142c 0x142d 0x142e 0x142f 0x1430 0x1431 0x1432 0x1433 ]
new_nullifiers: [ 0x1524 0x1525 0x1526 0x1527 0x1528 0x1529 0x152a 0x152b 0x152c 0x152d 0x152e 0x152f 0x1530 0x1531 0x1532 0x1533 ]
nullified_commitments: [ 0x1534 0x1535 0x1536 0x1537 0x1538 0x1539 0x153a 0x153b 0x153c 0x153d 0x153e 0x153f 0x1540 0x1541 0x1542 0x1543 ]
private_call_stack: [ 0x1624 0x1625 0x1626 0x1627 ]
public_call_stack: [ 0x1724 0x1725 0x1726 0x1727 ]
new_l2_to_l1_msgs: [ 0x1824 0x1825 ]
encrypted_logs_hash: [ 0x1924 0x1925 ]
unencrypted_logs_hash: [ 0x1a24 0x1a25 ]
encrypted_log_preimages_length: 0x1b24
unencrypted_log_preimages_length: 0x1c24
historic_block_data: private_data_tree_root: 0x1d24
nullifier_tree_root: 0x1d25
contract_tree_root: 0x1d26
l1_to_l2_messages_tree_root: 0x1d27
blocks_tree_root: 0x1d28
private_kernel_vk_tree_root: 0x1d29
public_data_tree_root: 0x1d2a
global_variables_hash: 0x1d2b

contract_deployment_data: deployer_public_key:
x: 0x1e24
y: 0x1e25

constructor_vk_hash: 0x1e25
function_tree_root: 0x1e26
contract_address_salt: 0x1e27
portal_contract_address: 0x2828282828282828282828282828282828282828

chain_id: 0x2424
version: 0x2524

is_execution_request: 0
 ]
proof: [ 51 51 51 51 51 51 51 51 51 51 51 51 51 51 51 51 ]
vk: key.circuit_type: 0
key.circuit_size: 101
key.num_public_inputs: 102
key.commitments: [
 A: { 0x200, 0x300 }
]
key.contains_recursive_proof: 1
key.recursive_proof_public_input_indices: [ 400 401 402 403 404 ]

function_leaf_membership_witness: leaf_index: 0x1031
sibling_path: [ 0x1031 0x1032 0x1033 0x1034 ]

contract_leaf_membership_witness: leaf_index: 0x1021
sibling_path: [ 0x1021 0x1022 0x1023 0x1024 0x1025 0x1026 0x1027 0x1028 0x1029 0x102a 0x102b 0x102c 0x102d 0x102e 0x102f 0x1030 ]

read_request_membership_witnesses: [ leaf_index: 0x1071
sibling_path: [ 0x1072 0x1073 0x1074 0x1075 0x1076 0x1077 0x1078 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1072
sibling_path: [ 0x1073 0x1074 0x1075 0x1076 0x1077 0x1078 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1073
sibling_path: [ 0x1074 0x1075 0x1076 0x1077 0x1078 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1074
sibling_path: [ 0x1075 0x1076 0x1077 0x1078 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1075
sibling_path: [ 0x1076 0x1077 0x1078 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1076
sibling_path: [ 0x1077 0x1078 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1077
sibling_path: [ 0x1078 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1078
sibling_path: [ 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1079
sibling_path: [ 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x107a
sibling_path: [ 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x107b
sibling_path: [ 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x107c
sibling_path: [ 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x107d
sibling_path: [ 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x107e
sibling_path: [ 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x107f
sibling_path: [ 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1080
sibling_path: [ 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1081
sibling_path: [ 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1082
sibling_path: [ 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 0x10a2 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1083
sibling_path: [ 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 0x10a2 0x10a3 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1084
sibling_path: [ 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 0x10a2 0x10a3 0x10a4 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1085
sibling_path: [ 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 0x10a2 0x10a3 0x10a4 0x10a5 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1086
sibling_path: [ 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 0x10a2 0x10a3 0x10a4 0x10a5 0x10a6 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1087
sibling_path: [ 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 0x10a2 0x10a3 0x10a4 0x10a5 0x10a6 0x10a7 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1088
sibling_path: [ 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 0x10a2 0x10a3 0x10a4 0x10a5 0x10a6 0x10a7 0x10a8 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1089
sibling_path: [ 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 0x10a2 0x10a3 0x10a4 0x10a5 0x10a6 0x10a7 0x10a8 0x10a9 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x108a
sibling_path: [ 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 0x10a2 0x10a3 0x10a4 0x10a5 0x10a6 0x10a7 0x10a8 0x10a9 0x10aa ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x108b
sibling_path: [ 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 0x10a2 0x10a3 0x10a4 0x10a5 0x10a6 0x10a7 0x10a8 0x10a9 0x10aa 0x10ab ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x108c
sibling_path: [ 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 0x10a2 0x10a3 0x10a4 0x10a5 0x10a6 0x10a7 0x10a8 0x10a9 0x10aa 0x10ab 0x10ac ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x108d
sibling_path: [ 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 0x10a2 0x10a3 0x10a4 0x10a5 0x10a6 0x10a7 0x10a8 0x10a9 0x10aa 0x10ab 0x10ac 0x10ad ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x108e
sibling_path: [ 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 0x10a2 0x10a3 0x10a4 0x10a5 0x10a6 0x10a7 0x10a8 0x10a9 0x10aa 0x10ab 0x10ac 0x10ad 0x10ae ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x108f
sibling_path: [ 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 0x10a2 0x10a3 0x10a4 0x10a5 0x10a6 0x10a7 0x10a8 0x10a9 0x10aa 0x10ab 0x10ac 0x10ad 0x10ae 0x10af ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1090
sibling_path: [ 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 0x10a2 0x10a3 0x10a4 0x10a5 0x10a6 0x10a7 0x10a8 0x10a9 0x10aa 0x10ab 0x10ac 0x10ad 0x10ae 0x10af 0x10b0 ]
is_transient: 0
hint_to_commitment: 0x0
 ]
portal_contract_address: 0x4141414141414141414141414141414141414141
acir_hash: 0x1061

"
`;

exports[`structs/kernel serializes and prints private_kernel_inputs_inner 1`] = `
"previous_kernel:
public_inputs:
end:
aggregation_object:
P0: { 0x1, 0x2 }
P1: { 0x101, 0x102 }
public_inputs: [
 0x3
 0x4
 0x5
 0x6
]
proof_witness_indices: [ 7 8 9 10 11 12 ]
has_data: 0

read_requests: [ 0x81 0x82 0x83 0x84 0x85 0x86 0x87 0x88 0x89 0x8a 0x8b 0x8c 0x8d 0x8e 0x8f 0x90 0x91 0x92 0x93 0x94 0x95 0x96 0x97 0x98 0x99 0x9a 0x9b 0x9c 0x9d 0x9e 0x9f 0xa0 0xa1 0xa2 0xa3 0xa4 0xa5 0xa6 0xa7 0xa8 0xa9 0xaa 0xab 0xac 0xad 0xae 0xaf 0xb0 0xb1 0xb2 0xb3 0xb4 0xb5 0xb6 0xb7 0xb8 0xb9 0xba 0xbb 0xbc 0xbd 0xbe 0xbf 0xc0 0xc1 0xc2 0xc3 0xc4 0xc5 0xc6 0xc7 0xc8 0xc9 0xca 0xcb 0xcc 0xcd 0xce 0xcf 0xd0 0xd1 0xd2 0xd3 0xd4 0xd5 0xd6 0xd7 0xd8 0xd9 0xda 0xdb 0xdc 0xdd 0xde 0xdf 0xe0 0xe1 0xe2 0xe3 0xe4 0xe5 0xe6 0xe7 0xe8 0xe9 0xea 0xeb 0xec 0xed 0xee 0xef 0xf0 0xf1 0xf2 0xf3 0xf4 0xf5 0xf6 0xf7 0xf8 0xf9 0xfa 0xfb 0xfc 0xfd 0xfe 0xff 0x100 ]
new_commitments: [ 0x101 0x102 0x103 0x104 0x105 0x106 0x107 0x108 0x109 0x10a 0x10b 0x10c 0x10d 0x10e 0x10f 0x110 0x111 0x112 0x113 0x114 0x115 0x116 0x117 0x118 0x119 0x11a 0x11b 0x11c 0x11d 0x11e 0x11f 0x120 0x121 0x122 0x123 0x124 0x125 0x126 0x127 0x128 0x129 0x12a 0x12b 0x12c 0x12d 0x12e 0x12f 0x130 0x131 0x132 0x133 0x134 0x135 0x136 0x137 0x138 0x139 0x13a 0x13b 0x13c 0x13d 0x13e 0x13f 0x140 ]
new_nullifiers: [ 0x201 0x202 0x203 0x204 0x205 0x206 0x207 0x208 0x209 0x20a 0x20b 0x20c 0x20d 0x20e 0x20f 0x210 0x211 0x212 0x213 0x214 0x215 0x216 0x217 0x218 0x219 0x21a 0x21b 0x21c 0x21d 0x21e 0x21f 0x220 0x221 0x222 0x223 0x224 0x225 0x226 0x227 0x228 0x229 0x22a 0x22b 0x22c 0x22d 0x22e 0x22f 0x230 0x231 0x232 0x233 0x234 0x235 0x236 0x237 0x238 0x239 0x23a 0x23b 0x23c 0x23d 0x23e 0x23f 0x240 ]
nullified_commitments: [ 0x301 0x302 0x303 0x304 0x305 0x306 0x307 0x308 0x309 0x30a 0x30b 0x30c 0x30d 0x30e 0x30f 0x310 0x311 0x312 0x313 0x314 0x315 0x316 0x317 0x318 0x319 0x31a 0x31b 0x31c 0x31d 0x31e 0x31f 0x320 0x321 0x322 0x323 0x324 0x325 0x326 0x327 0x328 0x329 0x32a 0x32b 0x32c 0x32d 0x32e 0x32f 0x330 0x331 0x332 0x333 0x334 0x335 0x336 0x337 0x338 0x339 0x33a 0x33b 0x33c 0x33d 0x33e 0x33f 0x340 ]
private_call_stack: [ 0x401 0x402 0x403 0x404 0x405 0x406 0x407 0x408 ]
public_call_stack: [ 0x501 0x502 0x503 0x504 0x505 0x506 0x507 0x508 ]
new_l2_to_l1_msgs: [ 0x601 0x602 ]
encrypted_logs_hash: [ 0x701 0x702 ]
unencrypted_logs_hash: [ 0x801 0x802 ]
encrypted_log_preimages_length: 0x901
unencrypted_log_preimages_length: 0xa01
new_contracts: [ contract_address: 0xb01
portal_contract_address: 0x202020202020202020202020202020202020202
function_tree_root: 0xb03
 ]
optionally_revealed_data: [ call_stack_item_hash: 0xc01
function_data: selector:
value: c02

is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc03
portal_contract_address: 0x404040404040404040404040404040404040404
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc02
function_data: selector:
value: c03

is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc04
portal_contract_address: 0x505050505050505050505050505050505050505
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc03
function_data: selector:
value: c04

is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc05
portal_contract_address: 0x606060606060606060606060606060606060606
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc04
function_data: selector:
value: c05

is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc06
portal_contract_address: 0x707070707070707070707070707070707070707
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 ]
public_data_update_requests: [ leaf_index: 0xd01
old_value: 0xd02
new_value: 0xd03
 leaf_index: 0xd02
old_value: 0xd03
new_value: 0xd04
 leaf_index: 0xd03
old_value: 0xd04
new_value: 0xd05
 leaf_index: 0xd04
old_value: 0xd05
new_value: 0xd06
 leaf_index: 0xd05
old_value: 0xd06
new_value: 0xd07
 leaf_index: 0xd06
old_value: 0xd07
new_value: 0xd08
 leaf_index: 0xd07
old_value: 0xd08
new_value: 0xd09
 leaf_index: 0xd08
old_value: 0xd09
new_value: 0xd0a
 leaf_index: 0xd09
old_value: 0xd0a
new_value: 0xd0b
 leaf_index: 0xd0a
old_value: 0xd0b
new_value: 0xd0c
 leaf_index: 0xd0b
old_value: 0xd0c
new_value: 0xd0d
 leaf_index: 0xd0c
old_value: 0xd0d
new_value: 0xd0e
 leaf_index: 0xd0d
old_value: 0xd0e
new_value: 0xd0f
 leaf_index: 0xd0e
old_value: 0xd0f
new_value: 0xd10
 leaf_index: 0xd0f
old_value: 0xd10
new_value: 0xd11
 leaf_index: 0xd10
old_value: 0xd11
new_value: 0xd12
 ]
public_data_reads: [ leaf_index: 0xe01
value: 0xe02
 leaf_index: 0xe02
value: 0xe03
 leaf_index: 0xe03
value: 0xe04
 leaf_index: 0xe04
value: 0xe05
 leaf_index: 0xe05
value: 0xe06
 leaf_index: 0xe06
value: 0xe07
 leaf_index: 0xe07
value: 0xe08
 leaf_index: 0xe08
value: 0xe09
 leaf_index: 0xe09
value: 0xe0a
 leaf_index: 0xe0a
value: 0xe0b
 leaf_index: 0xe0b
value: 0xe0c
 leaf_index: 0xe0c
value: 0xe0d
 leaf_index: 0xe0d
value: 0xe0e
 leaf_index: 0xe0e
value: 0xe0f
 leaf_index: 0xe0f
value: 0xe10
 leaf_index: 0xe10
value: 0xe11
 ]

constants:
block_data:
private_data_tree_root: 0x101
nullifier_tree_root: 0x102
contract_tree_root: 0x103
l1_to_l2_messages_tree_root: 0x104
blocks_tree_root: 0x105
private_kernel_vk_tree_root: 0x106
public_data_tree_root: 0x107
global_variables_hash: 0x108

tx_context:
is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: deployer_public_key:
x: 0x105
y: 0x106

constructor_vk_hash: 0x106
function_tree_root: 0x107
contract_address_salt: 0x108
portal_contract_address: 0x909090909090909090909090909090909090909

chain_id: 0x0
version: 0x0


is_private: 1

proof: [ 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 ]
vk: key.circuit_type: 0
key.circuit_size: 101
key.num_public_inputs: 102
key.commitments: [
 A: { 0x200, 0x300 }
]
key.contains_recursive_proof: 1
key.recursive_proof_public_input_indices: [ 400 401 402 403 404 ]

vk_index: 66
vk_path: [ 0x1000 0x1001 0x1002 ]

private_call:
call_stack_item:
contract_address: 0x1001
function_data: selector:
value: 4098

is_internal: 0
is_private: 1
is_constructor: 1

public_inputs: call_context:
msg_sender: 0x1012
storage_contract_address: 0x1013
portal_contract_address: 0x1014
function_selector: value: 4117

is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1111
return_values: [ 0x1211 0x1212 0x1213 0x1214 ]
read_requests: [ 0x1311 0x1312 0x1313 0x1314 0x1315 0x1316 0x1317 0x1318 0x1319 0x131a 0x131b 0x131c 0x131d 0x131e 0x131f 0x1320 0x1321 0x1322 0x1323 0x1324 0x1325 0x1326 0x1327 0x1328 0x1329 0x132a 0x132b 0x132c 0x132d 0x132e 0x132f 0x1330 ]
new_commitments: [ 0x1411 0x1412 0x1413 0x1414 0x1415 0x1416 0x1417 0x1418 0x1419 0x141a 0x141b 0x141c 0x141d 0x141e 0x141f 0x1420 ]
new_nullifiers: [ 0x1511 0x1512 0x1513 0x1514 0x1515 0x1516 0x1517 0x1518 0x1519 0x151a 0x151b 0x151c 0x151d 0x151e 0x151f 0x1520 ]
nullified_commitments: [ 0x1521 0x1522 0x1523 0x1524 0x1525 0x1526 0x1527 0x1528 0x1529 0x152a 0x152b 0x152c 0x152d 0x152e 0x152f 0x1530 ]
private_call_stack: [ 0x1611 0x1612 0x1613 0x1614 ]
public_call_stack: [ 0x1711 0x1712 0x1713 0x1714 ]
new_l2_to_l1_msgs: [ 0x1811 0x1812 ]
encrypted_logs_hash: [ 0x1911 0x1912 ]
unencrypted_logs_hash: [ 0x1a11 0x1a12 ]
encrypted_log_preimages_length: 0x1b11
unencrypted_log_preimages_length: 0x1c11
historic_block_data: private_data_tree_root: 0x1d11
nullifier_tree_root: 0x1d12
contract_tree_root: 0x1d13
l1_to_l2_messages_tree_root: 0x1d14
blocks_tree_root: 0x1d15
private_kernel_vk_tree_root: 0x1d16
public_data_tree_root: 0x1d17
global_variables_hash: 0x1d18

contract_deployment_data: deployer_public_key:
x: 0x1e11
y: 0x1e12

constructor_vk_hash: 0x1e12
function_tree_root: 0x1e13
contract_address_salt: 0x1e14
portal_contract_address: 0x1515151515151515151515151515151515151515

chain_id: 0x2411
version: 0x2511

is_execution_request: 0

private_call_stack_preimages: [ contract_address: 0x1011
function_data: selector:
value: 1012

is_internal: 0
is_private: 1
is_constructor: 1

public_inputs: call_context:
msg_sender: 0x1022
storage_contract_address: 0x1023
portal_contract_address: 0x1024
function_selector: value: 1025

is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1121
return_values: [ 0x1221 0x1222 0x1223 0x1224 ]
read_requests: [ 0x1321 0x1322 0x1323 0x1324 0x1325 0x1326 0x1327 0x1328 0x1329 0x132a 0x132b 0x132c 0x132d 0x132e 0x132f 0x1330 0x1331 0x1332 0x1333 0x1334 0x1335 0x1336 0x1337 0x1338 0x1339 0x133a 0x133b 0x133c 0x133d 0x133e 0x133f 0x1340 ]
new_commitments: [ 0x1421 0x1422 0x1423 0x1424 0x1425 0x1426 0x1427 0x1428 0x1429 0x142a 0x142b 0x142c 0x142d 0x142e 0x142f 0x1430 ]
new_nullifiers: [ 0x1521 0x1522 0x1523 0x1524 0x1525 0x1526 0x1527 0x1528 0x1529 0x152a 0x152b 0x152c 0x152d 0x152e 0x152f 0x1530 ]
nullified_commitments: [ 0x1531 0x1532 0x1533 0x1534 0x1535 0x1536 0x1537 0x1538 0x1539 0x153a 0x153b 0x153c 0x153d 0x153e 0x153f 0x1540 ]
private_call_stack: [ 0x1621 0x1622 0x1623 0x1624 ]
public_call_stack: [ 0x1721 0x1722 0x1723 0x1724 ]
new_l2_to_l1_msgs: [ 0x1821 0x1822 ]
encrypted_logs_hash: [ 0x1921 0x1922 ]
unencrypted_logs_hash: [ 0x1a21 0x1a22 ]
encrypted_log_preimages_length: 0x1b21
unencrypted_log_preimages_length: 0x1c21
historic_block_data: private_data_tree_root: 0x1d21
nullifier_tree_root: 0x1d22
contract_tree_root: 0x1d23
l1_to_l2_messages_tree_root: 0x1d24
blocks_tree_root: 0x1d25
private_kernel_vk_tree_root: 0x1d26
public_data_tree_root: 0x1d27
global_variables_hash: 0x1d28

contract_deployment_data: deployer_public_key:
x: 0x1e21
y: 0x1e22

constructor_vk_hash: 0x1e22
function_tree_root: 0x1e23
contract_address_salt: 0x1e24
portal_contract_address: 0x2525252525252525252525252525252525252525

chain_id: 0x2421
version: 0x2521

is_execution_request: 0
 contract_address: 0x1012
function_data: selector:
value: 1013

is_internal: 0
is_private: 1
is_constructor: 1

public_inputs: call_context:
msg_sender: 0x1023
storage_contract_address: 0x1024
portal_contract_address: 0x1025
function_selector: value: 1026

is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1122
return_values: [ 0x1222 0x1223 0x1224 0x1225 ]
read_requests: [ 0x1322 0x1323 0x1324 0x1325 0x1326 0x1327 0x1328 0x1329 0x132a 0x132b 0x132c 0x132d 0x132e 0x132f 0x1330 0x1331 0x1332 0x1333 0x1334 0x1335 0x1336 0x1337 0x1338 0x1339 0x133a 0x133b 0x133c 0x133d 0x133e 0x133f 0x1340 0x1341 ]
new_commitments: [ 0x1422 0x1423 0x1424 0x1425 0x1426 0x1427 0x1428 0x1429 0x142a 0x142b 0x142c 0x142d 0x142e 0x142f 0x1430 0x1431 ]
new_nullifiers: [ 0x1522 0x1523 0x1524 0x1525 0x1526 0x1527 0x1528 0x1529 0x152a 0x152b 0x152c 0x152d 0x152e 0x152f 0x1530 0x1531 ]
nullified_commitments: [ 0x1532 0x1533 0x1534 0x1535 0x1536 0x1537 0x1538 0x1539 0x153a 0x153b 0x153c 0x153d 0x153e 0x153f 0x1540 0x1541 ]
private_call_stack: [ 0x1622 0x1623 0x1624 0x1625 ]
public_call_stack: [ 0x1722 0x1723 0x1724 0x1725 ]
new_l2_to_l1_msgs: [ 0x1822 0x1823 ]
encrypted_logs_hash: [ 0x1922 0x1923 ]
unencrypted_logs_hash: [ 0x1a22 0x1a23 ]
encrypted_log_preimages_length: 0x1b22
unencrypted_log_preimages_length: 0x1c22
historic_block_data: private_data_tree_root: 0x1d22
nullifier_tree_root: 0x1d23
contract_tree_root: 0x1d24
l1_to_l2_messages_tree_root: 0x1d25
blocks_tree_root: 0x1d26
private_kernel_vk_tree_root: 0x1d27
public_data_tree_root: 0x1d28
global_variables_hash: 0x1d29

contract_deployment_data: deployer_public_key:
x: 0x1e22
y: 0x1e23

constructor_vk_hash: 0x1e23
function_tree_root: 0x1e24
contract_address_salt: 0x1e25
portal_contract_address: 0x2626262626262626262626262626262626262626

chain_id: 0x2422
version: 0x2522

is_execution_request: 0
 contract_address: 0x1013
function_data: selector:
value: 1014

is_internal: 0
is_private: 1
is_constructor: 1

public_inputs: call_context:
msg_sender: 0x1024
storage_contract_address: 0x1025
portal_contract_address: 0x1026
function_selector: value: 1027

is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1123
return_values: [ 0x1223 0x1224 0x1225 0x1226 ]
read_requests: [ 0x1323 0x1324 0x1325 0x1326 0x1327 0x1328 0x1329 0x132a 0x132b 0x132c 0x132d 0x132e 0x132f 0x1330 0x1331 0x1332 0x1333 0x1334 0x1335 0x1336 0x1337 0x1338 0x1339 0x133a 0x133b 0x133c 0x133d 0x133e 0x133f 0x1340 0x1341 0x1342 ]
new_commitments: [ 0x1423 0x1424 0x1425 0x1426 0x1427 0x1428 0x1429 0x142a 0x142b 0x142c 0x142d 0x142e 0x142f 0x1430 0x1431 0x1432 ]
new_nullifiers: [ 0x1523 0x1524 0x1525 0x1526 0x1527 0x1528 0x1529 0x152a 0x152b 0x152c 0x152d 0x152e 0x152f 0x1530 0x1531 0x1532 ]
nullified_commitments: [ 0x1533 0x1534 0x1535 0x1536 0x1537 0x1538 0x1539 0x153a 0x153b 0x153c 0x153d 0x153e 0x153f 0x1540 0x1541 0x1542 ]
private_call_stack: [ 0x1623 0x1624 0x1625 0x1626 ]
public_call_stack: [ 0x1723 0x1724 0x1725 0x1726 ]
new_l2_to_l1_msgs: [ 0x1823 0x1824 ]
encrypted_logs_hash: [ 0x1923 0x1924 ]
unencrypted_logs_hash: [ 0x1a23 0x1a24 ]
encrypted_log_preimages_length: 0x1b23
unencrypted_log_preimages_length: 0x1c23
historic_block_data: private_data_tree_root: 0x1d23
nullifier_tree_root: 0x1d24
contract_tree_root: 0x1d25
l1_to_l2_messages_tree_root: 0x1d26
blocks_tree_root: 0x1d27
private_kernel_vk_tree_root: 0x1d28
public_data_tree_root: 0x1d29
global_variables_hash: 0x1d2a

contract_deployment_data: deployer_public_key:
x: 0x1e23
y: 0x1e24

constructor_vk_hash: 0x1e24
function_tree_root: 0x1e25
contract_address_salt: 0x1e26
portal_contract_address: 0x2727272727272727272727272727272727272727

chain_id: 0x2423
version: 0x2523

is_execution_request: 0
 contract_address: 0x1014
function_data: selector:
value: 1015

is_internal: 0
is_private: 1
is_constructor: 1

public_inputs: call_context:
msg_sender: 0x1025
storage_contract_address: 0x1026
portal_contract_address: 0x1027
function_selector: value: 1028

is_delegate_call: 1
is_static_call: 1
is_contract_deployment: 1

args_hash: 0x1124
return_values: [ 0x1224 0x1225 0x1226 0x1227 ]
read_requests: [ 0x1324 0x1325 0x1326 0x1327 0x1328 0x1329 0x132a 0x132b 0x132c 0x132d 0x132e 0x132f 0x1330 0x1331 0x1332 0x1333 0x1334 0x1335 0x1336 0x1337 0x1338 0x1339 0x133a 0x133b 0x133c 0x133d 0x133e 0x133f 0x1340 0x1341 0x1342 0x1343 ]
new_commitments: [ 0x1424 0x1425 0x1426 0x1427 0x1428 0x1429 0x142a 0x142b 0x142c 0x142d 0x142e 0x142f 0x1430 0x1431 0x1432 0x1433 ]
new_nullifiers: [ 0x1524 0x1525 0x1526 0x1527 0x1528 0x1529 0x152a 0x152b 0x152c 0x152d 0x152e 0x152f 0x1530 0x1531 0x1532 0x1533 ]
nullified_commitments: [ 0x1534 0x1535 0x1536 0x1537 0x1538 0x1539 0x153a 0x153b 0x153c 0x153d 0x153e 0x153f 0x1540 0x1541 0x1542 0x1543 ]
private_call_stack: [ 0x1624 0x1625 0x1626 0x1627 ]
public_call_stack: [ 0x1724 0x1725 0x1726 0x1727 ]
new_l2_to_l1_msgs: [ 0x1824 0x1825 ]
encrypted_logs_hash: [ 0x1924 0x1925 ]
unencrypted_logs_hash: [ 0x1a24 0x1a25 ]
encrypted_log_preimages_length: 0x1b24
unencrypted_log_preimages_length: 0x1c24
historic_block_data: private_data_tree_root: 0x1d24
nullifier_tree_root: 0x1d25
contract_tree_root: 0x1d26
l1_to_l2_messages_tree_root: 0x1d27
blocks_tree_root: 0x1d28
private_kernel_vk_tree_root: 0x1d29
public_data_tree_root: 0x1d2a
global_variables_hash: 0x1d2b

contract_deployment_data: deployer_public_key:
x: 0x1e24
y: 0x1e25

constructor_vk_hash: 0x1e25
function_tree_root: 0x1e26
contract_address_salt: 0x1e27
portal_contract_address: 0x2828282828282828282828282828282828282828

chain_id: 0x2424
version: 0x2524

is_execution_request: 0
 ]
proof: [ 51 51 51 51 51 51 51 51 51 51 51 51 51 51 51 51 ]
vk: key.circuit_type: 0
key.circuit_size: 101
key.num_public_inputs: 102
key.commitments: [
 A: { 0x200, 0x300 }
]
key.contains_recursive_proof: 1
key.recursive_proof_public_input_indices: [ 400 401 402 403 404 ]

function_leaf_membership_witness: leaf_index: 0x1031
sibling_path: [ 0x1031 0x1032 0x1033 0x1034 ]

contract_leaf_membership_witness: leaf_index: 0x1021
sibling_path: [ 0x1021 0x1022 0x1023 0x1024 0x1025 0x1026 0x1027 0x1028 0x1029 0x102a 0x102b 0x102c 0x102d 0x102e 0x102f 0x1030 ]

read_request_membership_witnesses: [ leaf_index: 0x1071
sibling_path: [ 0x1072 0x1073 0x1074 0x1075 0x1076 0x1077 0x1078 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1072
sibling_path: [ 0x1073 0x1074 0x1075 0x1076 0x1077 0x1078 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1073
sibling_path: [ 0x1074 0x1075 0x1076 0x1077 0x1078 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1074
sibling_path: [ 0x1075 0x1076 0x1077 0x1078 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1075
sibling_path: [ 0x1076 0x1077 0x1078 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1076
sibling_path: [ 0x1077 0x1078 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1077
sibling_path: [ 0x1078 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1078
sibling_path: [ 0x1079 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1079
sibling_path: [ 0x107a 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x107a
sibling_path: [ 0x107b 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x107b
sibling_path: [ 0x107c 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x107c
sibling_path: [ 0x107d 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x107d
sibling_path: [ 0x107e 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x107e
sibling_path: [ 0x107f 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x107f
sibling_path: [ 0x1080 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1080
sibling_path: [ 0x1081 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1081
sibling_path: [ 0x1082 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1082
sibling_path: [ 0x1083 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 0x10a2 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1083
sibling_path: [ 0x1084 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 0x10a2 0x10a3 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1084
sibling_path: [ 0x1085 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 0x10a2 0x10a3 0x10a4 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1085
sibling_path: [ 0x1086 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 0x10a2 0x10a3 0x10a4 0x10a5 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1086
sibling_path: [ 0x1087 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 0x10a2 0x10a3 0x10a4 0x10a5 0x10a6 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1087
sibling_path: [ 0x1088 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 0x10a2 0x10a3 0x10a4 0x10a5 0x10a6 0x10a7 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1088
sibling_path: [ 0x1089 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 0x10a2 0x10a3 0x10a4 0x10a5 0x10a6 0x10a7 0x10a8 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1089
sibling_path: [ 0x108a 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 0x10a2 0x10a3 0x10a4 0x10a5 0x10a6 0x10a7 0x10a8 0x10a9 ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x108a
sibling_path: [ 0x108b 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 0x10a2 0x10a3 0x10a4 0x10a5 0x10a6 0x10a7 0x10a8 0x10a9 0x10aa ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x108b
sibling_path: [ 0x108c 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 0x10a2 0x10a3 0x10a4 0x10a5 0x10a6 0x10a7 0x10a8 0x10a9 0x10aa 0x10ab ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x108c
sibling_path: [ 0x108d 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 0x10a2 0x10a3 0x10a4 0x10a5 0x10a6 0x10a7 0x10a8 0x10a9 0x10aa 0x10ab 0x10ac ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x108d
sibling_path: [ 0x108e 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 0x10a2 0x10a3 0x10a4 0x10a5 0x10a6 0x10a7 0x10a8 0x10a9 0x10aa 0x10ab 0x10ac 0x10ad ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x108e
sibling_path: [ 0x108f 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 0x10a2 0x10a3 0x10a4 0x10a5 0x10a6 0x10a7 0x10a8 0x10a9 0x10aa 0x10ab 0x10ac 0x10ad 0x10ae ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x108f
sibling_path: [ 0x1090 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 0x10a2 0x10a3 0x10a4 0x10a5 0x10a6 0x10a7 0x10a8 0x10a9 0x10aa 0x10ab 0x10ac 0x10ad 0x10ae 0x10af ]
is_transient: 0
hint_to_commitment: 0x0
 leaf_index: 0x1090
sibling_path: [ 0x1091 0x1092 0x1093 0x1094 0x1095 0x1096 0x1097 0x1098 0x1099 0x109a 0x109b 0x109c 0x109d 0x109e 0x109f 0x10a0 0x10a1 0x10a2 0x10a3 0x10a4 0x10a5 0x10a6 0x10a7 0x10a8 0x10a9 0x10aa 0x10ab 0x10ac 0x10ad 0x10ae 0x10af 0x10b0 ]
is_transient: 0
hint_to_commitment: 0x0
 ]
portal_contract_address: 0x4141414141414141414141414141414141414141
acir_hash: 0x1061

"
`;

exports[`structs/kernel serializes and prints private_kernel_public_inputs 1`] = `
"end:
aggregation_object:
P0: { 0x1, 0x2 }
P1: { 0x101, 0x102 }
public_inputs: [
 0x3
 0x4
 0x5
 0x6
]
proof_witness_indices: [ 7 8 9 10 11 12 ]
has_data: 0

read_requests: [ 0x81 0x82 0x83 0x84 0x85 0x86 0x87 0x88 0x89 0x8a 0x8b 0x8c 0x8d 0x8e 0x8f 0x90 0x91 0x92 0x93 0x94 0x95 0x96 0x97 0x98 0x99 0x9a 0x9b 0x9c 0x9d 0x9e 0x9f 0xa0 0xa1 0xa2 0xa3 0xa4 0xa5 0xa6 0xa7 0xa8 0xa9 0xaa 0xab 0xac 0xad 0xae 0xaf 0xb0 0xb1 0xb2 0xb3 0xb4 0xb5 0xb6 0xb7 0xb8 0xb9 0xba 0xbb 0xbc 0xbd 0xbe 0xbf 0xc0 0xc1 0xc2 0xc3 0xc4 0xc5 0xc6 0xc7 0xc8 0xc9 0xca 0xcb 0xcc 0xcd 0xce 0xcf 0xd0 0xd1 0xd2 0xd3 0xd4 0xd5 0xd6 0xd7 0xd8 0xd9 0xda 0xdb 0xdc 0xdd 0xde 0xdf 0xe0 0xe1 0xe2 0xe3 0xe4 0xe5 0xe6 0xe7 0xe8 0xe9 0xea 0xeb 0xec 0xed 0xee 0xef 0xf0 0xf1 0xf2 0xf3 0xf4 0xf5 0xf6 0xf7 0xf8 0xf9 0xfa 0xfb 0xfc 0xfd 0xfe 0xff 0x100 ]
new_commitments: [ 0x101 0x102 0x103 0x104 0x105 0x106 0x107 0x108 0x109 0x10a 0x10b 0x10c 0x10d 0x10e 0x10f 0x110 0x111 0x112 0x113 0x114 0x115 0x116 0x117 0x118 0x119 0x11a 0x11b 0x11c 0x11d 0x11e 0x11f 0x120 0x121 0x122 0x123 0x124 0x125 0x126 0x127 0x128 0x129 0x12a 0x12b 0x12c 0x12d 0x12e 0x12f 0x130 0x131 0x132 0x133 0x134 0x135 0x136 0x137 0x138 0x139 0x13a 0x13b 0x13c 0x13d 0x13e 0x13f 0x140 ]
new_nullifiers: [ 0x201 0x202 0x203 0x204 0x205 0x206 0x207 0x208 0x209 0x20a 0x20b 0x20c 0x20d 0x20e 0x20f 0x210 0x211 0x212 0x213 0x214 0x215 0x216 0x217 0x218 0x219 0x21a 0x21b 0x21c 0x21d 0x21e 0x21f 0x220 0x221 0x222 0x223 0x224 0x225 0x226 0x227 0x228 0x229 0x22a 0x22b 0x22c 0x22d 0x22e 0x22f 0x230 0x231 0x232 0x233 0x234 0x235 0x236 0x237 0x238 0x239 0x23a 0x23b 0x23c 0x23d 0x23e 0x23f 0x240 ]
nullified_commitments: [ 0x301 0x302 0x303 0x304 0x305 0x306 0x307 0x308 0x309 0x30a 0x30b 0x30c 0x30d 0x30e 0x30f 0x310 0x311 0x312 0x313 0x314 0x315 0x316 0x317 0x318 0x319 0x31a 0x31b 0x31c 0x31d 0x31e 0x31f 0x320 0x321 0x322 0x323 0x324 0x325 0x326 0x327 0x328 0x329 0x32a 0x32b 0x32c 0x32d 0x32e 0x32f 0x330 0x331 0x332 0x333 0x334 0x335 0x336 0x337 0x338 0x339 0x33a 0x33b 0x33c 0x33d 0x33e 0x33f 0x340 ]
private_call_stack: [ 0x401 0x402 0x403 0x404 0x405 0x406 0x407 0x408 ]
public_call_stack: [ 0x501 0x502 0x503 0x504 0x505 0x506 0x507 0x508 ]
new_l2_to_l1_msgs: [ 0x601 0x602 ]
encrypted_logs_hash: [ 0x701 0x702 ]
unencrypted_logs_hash: [ 0x801 0x802 ]
encrypted_log_preimages_length: 0x901
unencrypted_log_preimages_length: 0xa01
new_contracts: [ contract_address: 0xb01
portal_contract_address: 0x202020202020202020202020202020202020202
function_tree_root: 0xb03
 ]
optionally_revealed_data: [ call_stack_item_hash: 0xc01
function_data: selector:
value: c02

is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc03
portal_contract_address: 0x404040404040404040404040404040404040404
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc02
function_data: selector:
value: c03

is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc04
portal_contract_address: 0x505050505050505050505050505050505050505
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc03
function_data: selector:
value: c04

is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc05
portal_contract_address: 0x606060606060606060606060606060606060606
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc04
function_data: selector:
value: c05

is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc06
portal_contract_address: 0x707070707070707070707070707070707070707
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 ]
public_data_update_requests: [ leaf_index: 0xd01
old_value: 0xd02
new_value: 0xd03
 leaf_index: 0xd02
old_value: 0xd03
new_value: 0xd04
 leaf_index: 0xd03
old_value: 0xd04
new_value: 0xd05
 leaf_index: 0xd04
old_value: 0xd05
new_value: 0xd06
 leaf_index: 0xd05
old_value: 0xd06
new_value: 0xd07
 leaf_index: 0xd06
old_value: 0xd07
new_value: 0xd08
 leaf_index: 0xd07
old_value: 0xd08
new_value: 0xd09
 leaf_index: 0xd08
old_value: 0xd09
new_value: 0xd0a
 leaf_index: 0xd09
old_value: 0xd0a
new_value: 0xd0b
 leaf_index: 0xd0a
old_value: 0xd0b
new_value: 0xd0c
 leaf_index: 0xd0b
old_value: 0xd0c
new_value: 0xd0d
 leaf_index: 0xd0c
old_value: 0xd0d
new_value: 0xd0e
 leaf_index: 0xd0d
old_value: 0xd0e
new_value: 0xd0f
 leaf_index: 0xd0e
old_value: 0xd0f
new_value: 0xd10
 leaf_index: 0xd0f
old_value: 0xd10
new_value: 0xd11
 leaf_index: 0xd10
old_value: 0xd11
new_value: 0xd12
 ]
public_data_reads: [ leaf_index: 0xe01
value: 0xe02
 leaf_index: 0xe02
value: 0xe03
 leaf_index: 0xe03
value: 0xe04
 leaf_index: 0xe04
value: 0xe05
 leaf_index: 0xe05
value: 0xe06
 leaf_index: 0xe06
value: 0xe07
 leaf_index: 0xe07
value: 0xe08
 leaf_index: 0xe08
value: 0xe09
 leaf_index: 0xe09
value: 0xe0a
 leaf_index: 0xe0a
value: 0xe0b
 leaf_index: 0xe0b
value: 0xe0c
 leaf_index: 0xe0c
value: 0xe0d
 leaf_index: 0xe0d
value: 0xe0e
 leaf_index: 0xe0e
value: 0xe0f
 leaf_index: 0xe0f
value: 0xe10
 leaf_index: 0xe10
value: 0xe11
 ]

constants:
block_data:
private_data_tree_root: 0x101
nullifier_tree_root: 0x102
contract_tree_root: 0x103
l1_to_l2_messages_tree_root: 0x104
blocks_tree_root: 0x105
private_kernel_vk_tree_root: 0x106
public_data_tree_root: 0x107
global_variables_hash: 0x108

tx_context:
is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: deployer_public_key:
x: 0x105
y: 0x106

constructor_vk_hash: 0x106
function_tree_root: 0x107
contract_address_salt: 0x108
portal_contract_address: 0x909090909090909090909090909090909090909

chain_id: 0x0
version: 0x0


is_private: 1
"
`;

exports[`structs/kernel serializes and prints private_kernel_public_inputs for ordering circuit 1`] = `
"end:
aggregation_object:
P0: { 0x1, 0x2 }
P1: { 0x101, 0x102 }
public_inputs: [
 0x3
 0x4
 0x5
 0x6
]
proof_witness_indices: [ 7 8 9 10 11 12 ]
has_data: 0

new_commitments: [ 0x101 0x102 0x103 0x104 0x105 0x106 0x107 0x108 0x109 0x10a 0x10b 0x10c 0x10d 0x10e 0x10f 0x110 0x111 0x112 0x113 0x114 0x115 0x116 0x117 0x118 0x119 0x11a 0x11b 0x11c 0x11d 0x11e 0x11f 0x120 0x121 0x122 0x123 0x124 0x125 0x126 0x127 0x128 0x129 0x12a 0x12b 0x12c 0x12d 0x12e 0x12f 0x130 0x131 0x132 0x133 0x134 0x135 0x136 0x137 0x138 0x139 0x13a 0x13b 0x13c 0x13d 0x13e 0x13f 0x140 ]
new_nullifiers: [ 0x201 0x202 0x203 0x204 0x205 0x206 0x207 0x208 0x209 0x20a 0x20b 0x20c 0x20d 0x20e 0x20f 0x210 0x211 0x212 0x213 0x214 0x215 0x216 0x217 0x218 0x219 0x21a 0x21b 0x21c 0x21d 0x21e 0x21f 0x220 0x221 0x222 0x223 0x224 0x225 0x226 0x227 0x228 0x229 0x22a 0x22b 0x22c 0x22d 0x22e 0x22f 0x230 0x231 0x232 0x233 0x234 0x235 0x236 0x237 0x238 0x239 0x23a 0x23b 0x23c 0x23d 0x23e 0x23f 0x240 ]
nullified_commitments: [ 0x301 0x302 0x303 0x304 0x305 0x306 0x307 0x308 0x309 0x30a 0x30b 0x30c 0x30d 0x30e 0x30f 0x310 0x311 0x312 0x313 0x314 0x315 0x316 0x317 0x318 0x319 0x31a 0x31b 0x31c 0x31d 0x31e 0x31f 0x320 0x321 0x322 0x323 0x324 0x325 0x326 0x327 0x328 0x329 0x32a 0x32b 0x32c 0x32d 0x32e 0x32f 0x330 0x331 0x332 0x333 0x334 0x335 0x336 0x337 0x338 0x339 0x33a 0x33b 0x33c 0x33d 0x33e 0x33f 0x340 ]
private_call_stack: [ 0x401 0x402 0x403 0x404 0x405 0x406 0x407 0x408 ]
public_call_stack: [ 0x501 0x502 0x503 0x504 0x505 0x506 0x507 0x508 ]
new_l2_to_l1_msgs: [ 0x601 0x602 ]
encrypted_logs_hash: [ 0x701 0x702 ]
unencrypted_logs_hash: [ 0x801 0x802 ]
encrypted_log_preimages_length: 0x901
unencrypted_log_preimages_length: 0xa01
new_contracts: [ contract_address: 0xb01
portal_contract_address: 0x202020202020202020202020202020202020202
function_tree_root: 0xb03
 ]
optionally_revealed_data: [ call_stack_item_hash: 0xc01
function_data: selector:
value: c02

is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc03
portal_contract_address: 0x404040404040404040404040404040404040404
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc02
function_data: selector:
value: c03

is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc04
portal_contract_address: 0x505050505050505050505050505050505050505
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc03
function_data: selector:
value: c04

is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc05
portal_contract_address: 0x606060606060606060606060606060606060606
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc04
function_data: selector:
value: c05

is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc06
portal_contract_address: 0x707070707070707070707070707070707070707
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 ]

constants:
block_data:
private_data_tree_root: 0x101
nullifier_tree_root: 0x102
contract_tree_root: 0x103
l1_to_l2_messages_tree_root: 0x104
blocks_tree_root: 0x105
private_kernel_vk_tree_root: 0x106
public_data_tree_root: 0x107
global_variables_hash: 0x108

tx_context:
is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: deployer_public_key:
x: 0x105
y: 0x106

constructor_vk_hash: 0x106
function_tree_root: 0x107
contract_address_salt: 0x108
portal_contract_address: 0x909090909090909090909090909090909090909

chain_id: 0x0
version: 0x0


is_private: 1
"
`;

exports[`structs/kernel serializes and prints public_kernel_inputs 1`] = `
"previous_kernel:
public_inputs:
end:
aggregation_object:
P0: { 0x1, 0x2 }
P1: { 0x101, 0x102 }
public_inputs: [
 0x3
 0x4
 0x5
 0x6
]
proof_witness_indices: [ 7 8 9 10 11 12 ]
has_data: 0

read_requests: [ 0x81 0x82 0x83 0x84 0x85 0x86 0x87 0x88 0x89 0x8a 0x8b 0x8c 0x8d 0x8e 0x8f 0x90 0x91 0x92 0x93 0x94 0x95 0x96 0x97 0x98 0x99 0x9a 0x9b 0x9c 0x9d 0x9e 0x9f 0xa0 0xa1 0xa2 0xa3 0xa4 0xa5 0xa6 0xa7 0xa8 0xa9 0xaa 0xab 0xac 0xad 0xae 0xaf 0xb0 0xb1 0xb2 0xb3 0xb4 0xb5 0xb6 0xb7 0xb8 0xb9 0xba 0xbb 0xbc 0xbd 0xbe 0xbf 0xc0 0xc1 0xc2 0xc3 0xc4 0xc5 0xc6 0xc7 0xc8 0xc9 0xca 0xcb 0xcc 0xcd 0xce 0xcf 0xd0 0xd1 0xd2 0xd3 0xd4 0xd5 0xd6 0xd7 0xd8 0xd9 0xda 0xdb 0xdc 0xdd 0xde 0xdf 0xe0 0xe1 0xe2 0xe3 0xe4 0xe5 0xe6 0xe7 0xe8 0xe9 0xea 0xeb 0xec 0xed 0xee 0xef 0xf0 0xf1 0xf2 0xf3 0xf4 0xf5 0xf6 0xf7 0xf8 0xf9 0xfa 0xfb 0xfc 0xfd 0xfe 0xff 0x100 ]
new_commitments: [ 0x101 0x102 0x103 0x104 0x105 0x106 0x107 0x108 0x109 0x10a 0x10b 0x10c 0x10d 0x10e 0x10f 0x110 0x111 0x112 0x113 0x114 0x115 0x116 0x117 0x118 0x119 0x11a 0x11b 0x11c 0x11d 0x11e 0x11f 0x120 0x121 0x122 0x123 0x124 0x125 0x126 0x127 0x128 0x129 0x12a 0x12b 0x12c 0x12d 0x12e 0x12f 0x130 0x131 0x132 0x133 0x134 0x135 0x136 0x137 0x138 0x139 0x13a 0x13b 0x13c 0x13d 0x13e 0x13f 0x140 ]
new_nullifiers: [ 0x201 0x202 0x203 0x204 0x205 0x206 0x207 0x208 0x209 0x20a 0x20b 0x20c 0x20d 0x20e 0x20f 0x210 0x211 0x212 0x213 0x214 0x215 0x216 0x217 0x218 0x219 0x21a 0x21b 0x21c 0x21d 0x21e 0x21f 0x220 0x221 0x222 0x223 0x224 0x225 0x226 0x227 0x228 0x229 0x22a 0x22b 0x22c 0x22d 0x22e 0x22f 0x230 0x231 0x232 0x233 0x234 0x235 0x236 0x237 0x238 0x239 0x23a 0x23b 0x23c 0x23d 0x23e 0x23f 0x240 ]
nullified_commitments: [ 0x301 0x302 0x303 0x304 0x305 0x306 0x307 0x308 0x309 0x30a 0x30b 0x30c 0x30d 0x30e 0x30f 0x310 0x311 0x312 0x313 0x314 0x315 0x316 0x317 0x318 0x319 0x31a 0x31b 0x31c 0x31d 0x31e 0x31f 0x320 0x321 0x322 0x323 0x324 0x325 0x326 0x327 0x328 0x329 0x32a 0x32b 0x32c 0x32d 0x32e 0x32f 0x330 0x331 0x332 0x333 0x334 0x335 0x336 0x337 0x338 0x339 0x33a 0x33b 0x33c 0x33d 0x33e 0x33f 0x340 ]
private_call_stack: [ 0x401 0x402 0x403 0x404 0x405 0x406 0x407 0x408 ]
public_call_stack: [ 0x501 0x502 0x503 0x504 0x505 0x506 0x507 0x508 ]
new_l2_to_l1_msgs: [ 0x601 0x602 ]
encrypted_logs_hash: [ 0x701 0x702 ]
unencrypted_logs_hash: [ 0x801 0x802 ]
encrypted_log_preimages_length: 0x901
unencrypted_log_preimages_length: 0xa01
new_contracts: [ contract_address: 0xb01
portal_contract_address: 0x202020202020202020202020202020202020202
function_tree_root: 0xb03
 ]
optionally_revealed_data: [ call_stack_item_hash: 0xc01
function_data: selector:
value: c02

is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc03
portal_contract_address: 0x404040404040404040404040404040404040404
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc02
function_data: selector:
value: c03

is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc04
portal_contract_address: 0x505050505050505050505050505050505050505
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc03
function_data: selector:
value: c04

is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc05
portal_contract_address: 0x606060606060606060606060606060606060606
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 call_stack_item_hash: 0xc04
function_data: selector:
value: c05

is_internal: 0
is_private: 1
is_constructor: 1

vk_hash: 0xc06
portal_contract_address: 0x707070707070707070707070707070707070707
pay_fee_from_l1: 1
pay_fee_from_public_l2: 0
called_from_l1: 1
called_from_public_l2: 0
 ]
public_data_update_requests: [ leaf_index: 0xd01
old_value: 0xd02
new_value: 0xd03
 leaf_index: 0xd02
old_value: 0xd03
new_value: 0xd04
 leaf_index: 0xd03
old_value: 0xd04
new_value: 0xd05
 leaf_index: 0xd04
old_value: 0xd05
new_value: 0xd06
 leaf_index: 0xd05
old_value: 0xd06
new_value: 0xd07
 leaf_index: 0xd06
old_value: 0xd07
new_value: 0xd08
 leaf_index: 0xd07
old_value: 0xd08
new_value: 0xd09
 leaf_index: 0xd08
old_value: 0xd09
new_value: 0xd0a
 leaf_index: 0xd09
old_value: 0xd0a
new_value: 0xd0b
 leaf_index: 0xd0a
old_value: 0xd0b
new_value: 0xd0c
 leaf_index: 0xd0b
old_value: 0xd0c
new_value: 0xd0d
 leaf_index: 0xd0c
old_value: 0xd0d
new_value: 0xd0e
 leaf_index: 0xd0d
old_value: 0xd0e
new_value: 0xd0f
 leaf_index: 0xd0e
old_value: 0xd0f
new_value: 0xd10
 leaf_index: 0xd0f
old_value: 0xd10
new_value: 0xd11
 leaf_index: 0xd10
old_value: 0xd11
new_value: 0xd12
 ]
public_data_reads: [ leaf_index: 0xe01
value: 0xe02
 leaf_index: 0xe02
value: 0xe03
 leaf_index: 0xe03
value: 0xe04
 leaf_index: 0xe04
value: 0xe05
 leaf_index: 0xe05
value: 0xe06
 leaf_index: 0xe06
value: 0xe07
 leaf_index: 0xe07
value: 0xe08
 leaf_index: 0xe08
value: 0xe09
 leaf_index: 0xe09
value: 0xe0a
 leaf_index: 0xe0a
value: 0xe0b
 leaf_index: 0xe0b
value: 0xe0c
 leaf_index: 0xe0c
value: 0xe0d
 leaf_index: 0xe0d
value: 0xe0e
 leaf_index: 0xe0e
value: 0xe0f
 leaf_index: 0xe0f
value: 0xe10
 leaf_index: 0xe10
value: 0xe11
 ]

constants:
block_data:
private_data_tree_root: 0x101
nullifier_tree_root: 0x102
contract_tree_root: 0x103
l1_to_l2_messages_tree_root: 0x104
blocks_tree_root: 0x105
private_kernel_vk_tree_root: 0x106
public_data_tree_root: 0x107
global_variables_hash: 0x108

tx_context:
is_fee_payment_tx: 0
is_rebate_payment_tx: 0
is_contract_deployment_tx: 1
contract_deployment_data: deployer_public_key:
x: 0x105
y: 0x106

constructor_vk_hash: 0x106
function_tree_root: 0x107
contract_address_salt: 0x108
portal_contract_address: 0x909090909090909090909090909090909090909

chain_id: 0x0
version: 0x0


is_private: 1

proof: [ 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 81 ]
vk: key.circuit_type: 0
key.circuit_size: 101
key.num_public_inputs: 102
key.commitments: [
 A: { 0x200, 0x300 }
]
key.contains_recursive_proof: 1
key.recursive_proof_public_input_indices: [ 400 401 402 403 404 ]

vk_index: 66
vk_path: [ 0x1000 0x1001 0x1002 ]

public_call:
call_stack_item:
contract_address: 0x1001
function_data: selector:
value: 4098

is_internal: 0
is_private: 0
is_constructor: 0

public_inputs: call_context:
msg_sender: 0x1011
storage_contract_address: 0x1001
portal_contract_address: 0x1313131313131313131313131313131313131313
function_selector: value: 4116

is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x1111
return_values: [ 0x1211 0x1212 0x0 0x0 ]
contract_storage_update_requests: [ storage_slot: 0x1411
old_value: 0x1412
new_value: 0x1413
 storage_slot: 0x1412
old_value: 0x1413
new_value: 0x1414
 storage_slot: 0x1413
old_value: 0x1414
new_value: 0x1415
 storage_slot: 0x1414
old_value: 0x1415
new_value: 0x1416
 storage_slot: 0x1415
old_value: 0x1416
new_value: 0x1417
 storage_slot: 0x1416
old_value: 0x1417
new_value: 0x1418
 storage_slot: 0x1417
old_value: 0x1418
new_value: 0x1419
 storage_slot: 0x1418
old_value: 0x1419
new_value: 0x141a
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 ]
contract_storage_reads: [ storage_slot: 0x1511
current_value: 0x1512
 storage_slot: 0x1512
current_value: 0x1513
 storage_slot: 0x1513
current_value: 0x1514
 storage_slot: 0x1514
current_value: 0x1515
 storage_slot: 0x1515
current_value: 0x1516
 storage_slot: 0x1516
current_value: 0x1517
 storage_slot: 0x1517
current_value: 0x1518
 storage_slot: 0x1518
current_value: 0x1519
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 ]
public_call_stack: [ 0x25b497e7a03d43caa94f2c150d6c9a25eaf9c196a7da8ba980da36a3621fe780 0xb69e095a46da1de05c6452abd27e954fcc55b53df5260c4dad22f928e63be86 0x1fe1cad8b9756b888d707c535cc0ade782cbb65a39dc38d38f33a3f84eb18fcd 0x1009141c8a1f13826522b380372cc6a8a27959874b84509ce18d23529c71a2c8 ]
new_commitments: [ 0x1711 0x1712 0x1713 0x1714 0x1715 0x1716 0x1717 0x1718 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0 ]
new_nullifiers: [ 0x1811 0x1812 0x1813 0x1814 0x1815 0x1816 0x1817 0x1818 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0 ]
new_l2_to_l1_msgs: [ 0x1911 0x0 ]
unencrypted_logs_hash: [ 0x1912 0x0 ]
unencrypted_log_preimages_length: 0x1913
historic_block_data: private_data_tree_root: 0x1a11
nullifier_tree_root: 0x1a12
contract_tree_root: 0x1a13
l1_to_l2_messages_tree_root: 0x1a14
blocks_tree_root: 0x1a15
private_kernel_vk_tree_root: 0x1a16
public_data_tree_root: 0x1a17
global_variables_hash: 0x1a18

prover_address: 0x1b12

is_execution_request: 0

public_call_stack_preimages: [ contract_address: 0x1301
function_data: selector:
value: 1302

is_internal: 0
is_private: 0
is_constructor: 0

public_inputs: call_context:
msg_sender: 0x1001
storage_contract_address: 0x1301
portal_contract_address: 0x1313131313131313131313131313131313131313
function_selector: value: 1314

is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x1411
return_values: [ 0x1511 0x1512 0x0 0x0 ]
contract_storage_update_requests: [ storage_slot: 0x1711
old_value: 0x1712
new_value: 0x1713
 storage_slot: 0x1712
old_value: 0x1713
new_value: 0x1714
 storage_slot: 0x1713
old_value: 0x1714
new_value: 0x1715
 storage_slot: 0x1714
old_value: 0x1715
new_value: 0x1716
 storage_slot: 0x1715
old_value: 0x1716
new_value: 0x1717
 storage_slot: 0x1716
old_value: 0x1717
new_value: 0x1718
 storage_slot: 0x1717
old_value: 0x1718
new_value: 0x1719
 storage_slot: 0x1718
old_value: 0x1719
new_value: 0x171a
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 ]
contract_storage_reads: [ storage_slot: 0x1811
current_value: 0x1812
 storage_slot: 0x1812
current_value: 0x1813
 storage_slot: 0x1813
current_value: 0x1814
 storage_slot: 0x1814
current_value: 0x1815
 storage_slot: 0x1815
current_value: 0x1816
 storage_slot: 0x1816
current_value: 0x1817
 storage_slot: 0x1817
current_value: 0x1818
 storage_slot: 0x1818
current_value: 0x1819
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 ]
public_call_stack: [ 0x1911 0x1912 0x0 0x0 ]
new_commitments: [ 0x1a11 0x1a12 0x1a13 0x1a14 0x1a15 0x1a16 0x1a17 0x1a18 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0 ]
new_nullifiers: [ 0x1b11 0x1b12 0x1b13 0x1b14 0x1b15 0x1b16 0x1b17 0x1b18 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0 ]
new_l2_to_l1_msgs: [ 0x1c11 0x0 ]
unencrypted_logs_hash: [ 0x1c12 0x0 ]
unencrypted_log_preimages_length: 0x1c13
historic_block_data: private_data_tree_root: 0x1d11
nullifier_tree_root: 0x1d12
contract_tree_root: 0x1d13
l1_to_l2_messages_tree_root: 0x1d14
blocks_tree_root: 0x1d15
private_kernel_vk_tree_root: 0x1d16
public_data_tree_root: 0x1d17
global_variables_hash: 0x1d18

prover_address: 0x1e12

is_execution_request: 0
 contract_address: 0x1302
function_data: selector:
value: 1303

is_internal: 0
is_private: 0
is_constructor: 0

public_inputs: call_context:
msg_sender: 0x1001
storage_contract_address: 0x1302
portal_contract_address: 0x1414141414141414141414141414141414141414
function_selector: value: 1315

is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x1412
return_values: [ 0x1512 0x1513 0x0 0x0 ]
contract_storage_update_requests: [ storage_slot: 0x1712
old_value: 0x1713
new_value: 0x1714
 storage_slot: 0x1713
old_value: 0x1714
new_value: 0x1715
 storage_slot: 0x1714
old_value: 0x1715
new_value: 0x1716
 storage_slot: 0x1715
old_value: 0x1716
new_value: 0x1717
 storage_slot: 0x1716
old_value: 0x1717
new_value: 0x1718
 storage_slot: 0x1717
old_value: 0x1718
new_value: 0x1719
 storage_slot: 0x1718
old_value: 0x1719
new_value: 0x171a
 storage_slot: 0x1719
old_value: 0x171a
new_value: 0x171b
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 ]
contract_storage_reads: [ storage_slot: 0x1812
current_value: 0x1813
 storage_slot: 0x1813
current_value: 0x1814
 storage_slot: 0x1814
current_value: 0x1815
 storage_slot: 0x1815
current_value: 0x1816
 storage_slot: 0x1816
current_value: 0x1817
 storage_slot: 0x1817
current_value: 0x1818
 storage_slot: 0x1818
current_value: 0x1819
 storage_slot: 0x1819
current_value: 0x181a
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 ]
public_call_stack: [ 0x1912 0x1913 0x0 0x0 ]
new_commitments: [ 0x1a12 0x1a13 0x1a14 0x1a15 0x1a16 0x1a17 0x1a18 0x1a19 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0 ]
new_nullifiers: [ 0x1b12 0x1b13 0x1b14 0x1b15 0x1b16 0x1b17 0x1b18 0x1b19 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0 ]
new_l2_to_l1_msgs: [ 0x1c12 0x0 ]
unencrypted_logs_hash: [ 0x1c13 0x0 ]
unencrypted_log_preimages_length: 0x1c14
historic_block_data: private_data_tree_root: 0x1d12
nullifier_tree_root: 0x1d13
contract_tree_root: 0x1d14
l1_to_l2_messages_tree_root: 0x1d15
blocks_tree_root: 0x1d16
private_kernel_vk_tree_root: 0x1d17
public_data_tree_root: 0x1d18
global_variables_hash: 0x1d19

prover_address: 0x1e13

is_execution_request: 0
 contract_address: 0x1303
function_data: selector:
value: 1304

is_internal: 0
is_private: 0
is_constructor: 0

public_inputs: call_context:
msg_sender: 0x1001
storage_contract_address: 0x1303
portal_contract_address: 0x1515151515151515151515151515151515151515
function_selector: value: 1316

is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x1413
return_values: [ 0x1513 0x1514 0x0 0x0 ]
contract_storage_update_requests: [ storage_slot: 0x1713
old_value: 0x1714
new_value: 0x1715
 storage_slot: 0x1714
old_value: 0x1715
new_value: 0x1716
 storage_slot: 0x1715
old_value: 0x1716
new_value: 0x1717
 storage_slot: 0x1716
old_value: 0x1717
new_value: 0x1718
 storage_slot: 0x1717
old_value: 0x1718
new_value: 0x1719
 storage_slot: 0x1718
old_value: 0x1719
new_value: 0x171a
 storage_slot: 0x1719
old_value: 0x171a
new_value: 0x171b
 storage_slot: 0x171a
old_value: 0x171b
new_value: 0x171c
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 ]
contract_storage_reads: [ storage_slot: 0x1813
current_value: 0x1814
 storage_slot: 0x1814
current_value: 0x1815
 storage_slot: 0x1815
current_value: 0x1816
 storage_slot: 0x1816
current_value: 0x1817
 storage_slot: 0x1817
current_value: 0x1818
 storage_slot: 0x1818
current_value: 0x1819
 storage_slot: 0x1819
current_value: 0x181a
 storage_slot: 0x181a
current_value: 0x181b
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 ]
public_call_stack: [ 0x1913 0x1914 0x0 0x0 ]
new_commitments: [ 0x1a13 0x1a14 0x1a15 0x1a16 0x1a17 0x1a18 0x1a19 0x1a1a 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0 ]
new_nullifiers: [ 0x1b13 0x1b14 0x1b15 0x1b16 0x1b17 0x1b18 0x1b19 0x1b1a 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0 ]
new_l2_to_l1_msgs: [ 0x1c13 0x0 ]
unencrypted_logs_hash: [ 0x1c14 0x0 ]
unencrypted_log_preimages_length: 0x1c15
historic_block_data: private_data_tree_root: 0x1d13
nullifier_tree_root: 0x1d14
contract_tree_root: 0x1d15
l1_to_l2_messages_tree_root: 0x1d16
blocks_tree_root: 0x1d17
private_kernel_vk_tree_root: 0x1d18
public_data_tree_root: 0x1d19
global_variables_hash: 0x1d1a

prover_address: 0x1e14

is_execution_request: 0
 contract_address: 0x1304
function_data: selector:
value: 1305

is_internal: 0
is_private: 0
is_constructor: 0

public_inputs: call_context:
msg_sender: 0x1001
storage_contract_address: 0x1304
portal_contract_address: 0x1616161616161616161616161616161616161616
function_selector: value: 1317

is_delegate_call: 0
is_static_call: 0
is_contract_deployment: 0

args_hash: 0x1414
return_values: [ 0x1514 0x1515 0x0 0x0 ]
contract_storage_update_requests: [ storage_slot: 0x1714
old_value: 0x1715
new_value: 0x1716
 storage_slot: 0x1715
old_value: 0x1716
new_value: 0x1717
 storage_slot: 0x1716
old_value: 0x1717
new_value: 0x1718
 storage_slot: 0x1717
old_value: 0x1718
new_value: 0x1719
 storage_slot: 0x1718
old_value: 0x1719
new_value: 0x171a
 storage_slot: 0x1719
old_value: 0x171a
new_value: 0x171b
 storage_slot: 0x171a
old_value: 0x171b
new_value: 0x171c
 storage_slot: 0x171b
old_value: 0x171c
new_value: 0x171d
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 storage_slot: 0x0
old_value: 0x1
new_value: 0x2
 ]
contract_storage_reads: [ storage_slot: 0x1814
current_value: 0x1815
 storage_slot: 0x1815
current_value: 0x1816
 storage_slot: 0x1816
current_value: 0x1817
 storage_slot: 0x1817
current_value: 0x1818
 storage_slot: 0x1818
current_value: 0x1819
 storage_slot: 0x1819
current_value: 0x181a
 storage_slot: 0x181a
current_value: 0x181b
 storage_slot: 0x181b
current_value: 0x181c
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 storage_slot: 0x0
current_value: 0x1
 ]
public_call_stack: [ 0x1914 0x1915 0x0 0x0 ]
new_commitments: [ 0x1a14 0x1a15 0x1a16 0x1a17 0x1a18 0x1a19 0x1a1a 0x1a1b 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0 ]
new_nullifiers: [ 0x1b14 0x1b15 0x1b16 0x1b17 0x1b18 0x1b19 0x1b1a 0x1b1b 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0 ]
new_l2_to_l1_msgs: [ 0x1c14 0x0 ]
unencrypted_logs_hash: [ 0x1c15 0x0 ]
unencrypted_log_preimages_length: 0x1c16
historic_block_data: private_data_tree_root: 0x1d14
nullifier_tree_root: 0x1d15
contract_tree_root: 0x1d16
l1_to_l2_messages_tree_root: 0x1d17
blocks_tree_root: 0x1d18
private_kernel_vk_tree_root: 0x1d19
public_data_tree_root: 0x1d1a
global_variables_hash: 0x1d1b

prover_address: 0x1e15

is_execution_request: 0
 ]
proof: [ 01 01 01 01 01 01 01 01 01 01 01 01 01 01 01 01 ]
portal_contract_address: 0x1002
bytecode_hash: 0x1003

"
`;
